Melhorias na versão android